# pg_dedump

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  shell.nix
src/: helpers.py  main.py
src/pg_dedump/: helpers.py  main.py
