
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "sqlglot",
  "duckdb",
  "tqdm",
  "pyarrow"
]
description = ""
license = "GPL-3.0+"
name = "pg_dedump"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]
pg_dedump = "pg_dedump.main:cli"

[dependency-groups]
dev = [
  "deptry",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]


